upgrade slome
